tests/NormalTests/paczka1/small_fuzzy/40134123.err
Error in line 2: A456 A456 42,0
Error in line 12: Hn3Iqyr S350 78,7
Error in line 7: YMSTC A456 18,0
